force-app/main/default/objects/Channel__c/Channel__c.object-meta.xml
<CustomObject>
    <label>Channel Weightage</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Channel Weightage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>