force-app/main/default/objects/Channel__c/fields/Channel_Category__c.field-meta.xml
<CustomField>
    <fullName>Channel_Category__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Channel Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>