force-app/main/default/objects/Channel__c/fields/Channel_Name__c.field-meta.xml
<CustomField>
    <fullName>Channel_Name__c</fullName>
    <label>Channel Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone Conversations - Account Specific</fullName>
            </value>
            <value>
                <fullName>Email - Account Specific</fullName>
            </value>
            <value>
                <fullName>Virtual Meeting - Account Specific</fullName>
            </value>
            <value>
                <fullName>Group Webinar</fullName>
            </value>
            <value>
                <fullName>Social Interaction - Account Specific</fullName>
            </value>
            <value>
                <fullName>In-person Meeting - Multiple Customers</fullName>
            </value>
            <value>
                <fullName>Onsite meeting at UHG</fullName>
            </value>
            <value>
                <fullName>UHG Sponsored Prospect Event</fullName>
            </value>
            <value>
                <fullName>Tradeshow/Industry Event</fullName>
            </value>
            <value>
                <fullName>Executive Phone Contact</fullName>
            </value>
            <value>
                <fullName>Newsletters</fullName>
            </value>
            <value>
                <fullName>Marketing Team Campaign</fullName>
            </value>
            <value>
                <fullName>Corporate Comm Webinar</fullName>
            </value>
            <value>
                <fullName>In-person Meeting/Event - Account Specific</fullName>
            </value>
            <value>
                <fullName>Executive Meeting</fullName>
            </value>
            <value>
                <fullName>CD Sponsored Prospect Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>