force-app/main/default/objects/Channel__c/fields/Maximum_Occurance__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Occurance__c</fullName>
    <label>Maximum Occurences</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>