force-app/main/default/objects/Channel__c/fields/Scoring_Model__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scoring Model</label>
    <referenceTo>Scoring_Model__c</referenceTo>
    <relationshipName>Channels</relationshipName>
    <type>Lookup</type>
</CustomField>