force-app/main/default/objects/Channel__c/fields/Weightage__c.field-meta.xml
<CustomField>
    <fullName>Weightage__c</fullName>
    <label>Weightage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>