force-app/main/default/objects/Channel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Channel_Name__c</columns>
    <columns>Weightage__c</columns>
    <columns>Maximum_Occurance__c</columns>
    <columns>Channel_Category__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>